Mon Aug 15 19:52:50 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/PI/PICurrent_Loader.cpp:
        * tao/PI/PICurrent_Loader.h:
        
          Change library name in ACE_FACTORY_DEFINE and ACE_FACTORY_DECLARE
          to TAO_PI (where the modified files are located) instad of TAO.

Mon Aug 15 19:14:16 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/tests/BiDir_CORBALOC/TimeServer.cpp:
        
          Added #include of "tao/AnyTypeCode/Any.h".

Mon Aug 15 19:10:43 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/PortableGroup.mpc:
        
          Removed the extra subgroup labeled OBRSVCS_COMPONENTS. This is
          not used on any platform and it creates an extra subdirectory
          in the MSVC 7.1 solution browser.

Mon Aug 15 09:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * TAO_IDL/be/be_codegen.cpp:
          Generate the A.h includes in the header file instead of the cpp file.
          When A.idl includes B.pidl which includes C.pidl, when we generate
          the includes in the header file, then in AC.h we don't have the types
          from CC.h.

Fri Aug 12 12:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PI/ORBInitializer_Registry_Impl.cpp:
        * tao/PI/PICurrent.{h,cpp,inl}:
          Made PICurrent on the client side working again. When PICurrent is
          requested and used, then we allocate a key in the orb tss resources
          and create the PICurrent_Impl at that moment. The server side of
          PICurrent is now the next todo.

Fri Aug 12 09:54:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB.cpp:
        * tao/ORBInitializer_Registry_Adapter.h:
        * tao/PI/ORBInitializer_Registry_Impl.{h,cpp}:
          Changed the way the number of allocated slots is passed to PICurrent.
          This is now completely handled in the PI library, it is not up